--- a/htmls/feedback.html
+++ b/htmls/feedback.html
@@ -17,7 +17,7 @@
 												<div class="vsc" sig="VMv">
 													<div class="vspi"></div>
 													<span class="tl">
-														<h3 class="r"><a href="http://finance.yahoo.com/q?s=S" target="_blank" class="l" onmousedown="return rwt(this,'','','','1','AFQjCNECIGs_y5WWqY8fWO52WHcEesoydA','','0CCAQFjAA')"><em>加强</em>: 这里放题目</a></h3>
+														<h3 class="r"><a href="" target="_blank" class="l" onmousedown="return rwt(this,'','','','1','AFQjCNECIGs_y5WWqY8fWO52WHcEesoydA','','0CCAQFjAA')"><em>加强</em>: 这里放题目</a></h3>
 														<button class="vspib"></button>
 													</span>
 													<div class="s">
