commit a lot of html files

--- a/htmls/google.html
+++ b/htmls/google.html
@@ -93,9 +93,9 @@
 											<span id=gbmpn class=gbps onclick="gbar.logger.il(10,{t:69})">刘宝</span>
 											<span class=gbps2>yimiqisan@gmail.com</span>
 											<ol class=gbmcc>
-												<li class=gbmtc><a id=gbmplp class="gbml1 gbp1" href="">个人资料</a></li>
-												<li class=gbmtc><a class=gbml1 href="">账户设置</a></li>
-												<li class=gbmtc><a class=gbml1 href="">退出账户</a></li>
+												<li class=gbmtc><a id=gbmplp class="gbml1 gbp1" href="/account/profile">个人资料</a></li>
+												<li class=gbmtc><a class=gbml1 href="/account/setting">账户设置</a></li>
+												<li class=gbmtc><a class=gbml1 href="/account/logout">退出账户</a></li>
 											</ol>
 										</div>
 										<div class=gbmh></div>
@@ -111,12 +111,12 @@
 					<li class="gbt gbtb"><span class=gbts></span></li>
 					<noscript><li class=gbt><a class=gbgt href=""><span class=gbtb2></span><span class=gbts>Sign out</span></a></li><li class="gbt gbtb"><span class=gbts></span></li></noscript>
 						{% else %}
-						<li class="gbt"><a class="gbgt" id="" href="">
+						<li class="gbt"><a class="gbgt" id="" href="/account/login">
 							<span class="gbtb2"></span>
 							<span id="gbgs4" class="gbts"><span id="gbi4s1">登陆</span></span>
 						</a></li>
 						<li class="gbt gbtb"><span class="gbts"></span></li>
-						<li class="gbt"><a class="gbgt" id="" href="">
+						<li class="gbt"><a class="gbgt" id="" href="/account/register">
 							<span class="gbtb2"></span>
 							<span id="gbgs41" class="gbts"><span id="gbi41s1">注册</span></span>
 						</a></li>
@@ -177,7 +177,7 @@
 					<div class="tsf-p" style="" id="foot" role="contentinfo"> 
 						<div style="height:13px;line-height:0"></div>  
 						<div style="margin:19px auto;text-align:center" id="fll">
-							<a href="">招聘</a>‎<a href="">网站地图</a>‎<a href="">关于我们</a>‎<a href="">我心户外</a>‎<a href="">反馈信息</a>‎
+							<a href="">招聘</a>‎<a href="">网站地图</a>‎<a href="">关于我们</a>‎<a href="">我心户外</a>‎<a href="/feedback">反馈信息</a>‎
 						</div>   
 					</div> 
 					<div style="" id="bfoot"></div>  
