--- a/htmls/register.html
+++ b/htmls/register.html
@@ -10,9 +10,9 @@
 	</div>
 {% end %}
 {% block center_col %}
-	<form action="/register" method="post">
+	<form action="/account/register" method="post">
 	绰号:<input type="text" name="nick"/><br/><br/>
-	密码:<input type="password" name="passwd"/><br/><br/>
+	密码:<input type="password" name="password"/><br/><br/>
 	验证码:<input type="text" name="code"/><br/><br/>
 	<input type="submit" value="注册">
 </form>
