--- a/htmls/login.html
+++ b/htmls/login.html
@@ -11,8 +11,8 @@
 {% end %}
 {% block center_col %}
 	<form action="/account/login" method="post">
-		email: <input type="email" name="email"/><br/><br/>
-		passwd:<input type="password" name="passwd"/><br/><br/>
+		绰号: <input type="text" name="nick"/><br/><br/>
+		密码:<input type="password" name="password"/><br/><br/>
 		<input type="submit" value="login">
 	</form>
 {% end %}
