add timeline module design

--- a/htmls/google.html
+++ b/htmls/google.html
@@ -79,19 +79,19 @@
 								<span id=gbgs4 class=gbts>
 									<span id=gbi4>
 										<span class=gbi4p></span>
-										<span id=gbi4id style="display:none"></span>
-										<img id=gbi4i width=24 height=24 onerror="window.gbar&&gbar.pge?gbar.pge():this.loadError=1;" src="{{static_url('img/me24.jpg')}}" alt="刘宝">
+										<span id=gbi4id></span>
+										<img id=gbi4i width=24 height=24 style="display:none" onerror="window.gbar&&gbar.pge?gbar.pge():this.loadError=1;" src="{{static_url('img/me24.jpg')}}" alt="刘宝">
 									</span>
 								</span>
 							</a>
 							<div class=gbm id=gbd4 aria-owner=gbg4>
 								<div class=gbmc>
 									<div id=gbmpdv>
-										<span id=gbmpid style="display:none"></span>
-										<img id=gbmpi width=96 height=96 onerror="window.gbar&&gbar.ppe?gbar.ppe():this.loadError=1;" src="{{static_url('img/me24.jpg')}}" alt="刘宝">
+										<span id=gbmpid></span>
+										<img id=gbmpi width=96 height=96 style="display:none" onerror="window.gbar&&gbar.ppe?gbar.ppe():this.loadError=1;" src="{{static_url('img/me24.jpg')}}" alt="刘宝">
 										<div class=gbpc>
-											<span id=gbmpn class=gbps onclick="gbar.logger.il(10,{t:69})">刘宝</span>
-											<span class=gbps2>yimiqisan@gmail.com</span>
+											<span id=gbmpn class=gbps onclick="gbar.logger.il(10,{t:69})">{{current_user}}</span>
+											<span class=gbps2>未绑定安全邮箱</span>
 											<ol class=gbmcc>
 												<li class=gbmtc><a id=gbmplp class="gbml1 gbp1" href="/account/profile">个人资料</a></li>
 												<li class=gbmtc><a class=gbml1 href="/account/setting">账户设置</a></li>
