--- a/htmls/index.html
+++ b/htmls/index.html
@@ -6,7 +6,7 @@
 {% block leftnav %}{% end %}
 {% block center_col %}
 	<div id="index">
-		<h1>活动功能即将上线，敬请期待！</h1></br/><br/></br/><br/></br/><br/></br/><br/></br/><br/></br/><br/></br/><br/>
-		<span><a href="/feedback">说说你心中的户外网站吧</a></span>
+		<h1 style="font-size:40px;">活动功能即将上线，敬请期待！</h1></br/><br/></br/><br/></br/><br/></br/><br/></br/>
+		<span><a href="/feedback" style="color:green;font-size:40px;">说说你心中的户外网站吧</a></span>
 	</div>
 {% end %}
