--- a/htmls/google.html
+++ b/htmls/google.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="description" content="Search the world's information, including webpages, images, videos and more. Google has many special features to help you find exactly what you're looking for.">
-	<meta name="robots" content="noodp"><title>嘻哈户外</title>
-	<script language="javascript" src="{{ static_url('js/google.js') }}" type="text/javascript"></script>	
+	<meta name="robots" content="noodp"><title>远航户外</title>
+	<script language="javascript" src="{{ static_url('js/google.js') }}" type="text/javascript"></script>
+	<link rel="stylesheet" href="{{ static_url('css/base.css') }}">
 	<link rel="stylesheet" href="{{ static_url('css/google.css') }}">
 	{% block static %}{% end %}
 </head>
@@ -157,7 +158,7 @@
 		<div>  
 			<div id="cnt">   
 				<div style="" id="appbar">  
-					<div id="ab_name">嘻哈户外</div>  
+					<div id="ab_name">远航户外</div>  
 					<div id="sbfrm_l"></div>
 					<ol id="ab_ctls"></ol> 
 				</div> 
