--- a/htmls/setting.html
+++ b/htmls/setting.html
@@ -1,13 +1,101 @@
 {% extends google.html %}
 
 {% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/profile.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/style.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/reset.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/text.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/grid.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jqueryui.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/main.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/layout_fixed.css') }}" media="screen">
+	
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/theme/theme_light.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/layout_fixed.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/header_top.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/theme/theme_red.css') }}" media="screen">
+	
+	<script type="text/javascript" src="{{ static_url('js/jquery.min.js') }}"></script>
+	<script type="text/javascript" src="{{ static_url('js/jquery-ui.min.js') }}"></script>
+	<script type="text/javascript" src="{{ static_url('js/jquery.uniform.js') }}"></script>
+	<script type="text/javascript" src="{{ static_url('js/jquery.ui.totop.js') }}"></script>
+	
+	<script type="text/javascript" src="{{ static_url('js/adminica_ui.js') }}"></script>
 {% end %}
 {% block leftnav %}
-	<div>
-		<a href="/">回首页</a>
+	<div id="topbar">
+		<div class="main_container container_8 clearfix">
+			<div class="box grid_8">
+				<h2 class="box_head grad_colour">Accordion with Heading</h2>
+				<a href="#" class="grabber">&nbsp;</a>
+				<a href="#" class="toggle">&nbsp;</a>
+				<div class="toggle_container">
+					<ul class="block content_accordion">
+						<li>
+							<a href="#" class="handle">&nbsp;</a>
+							<h3 class="bar">First Heading</h3>
+							<div class="content">
+								<h1>Primary Heading</h1>
+								<p>Lorem Ipsum is simply dummy text of the <a href="#" title="This is a tooltip">printing industry</a>. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+		
+								<h2>Secondary Heading</h2>
+								<p>Lorem Ipsum is simply dummy text of the printing industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 				
+							</div>
+						</li>
+						<li>
+							<a href="#" class="handle">&nbsp;</a>
+							<h3 class="bar">Second Heading</h3>
+							<div class="content">
+								<p>Content goes here</p>
+							</div>
+						</li>
+						<li>
+							<a href="#" class="handle">&nbsp;</a>
+							<h3 class="bar">Third Heading</h3>
+							<div class="content">
+								<p>Content goes here</p>
+							</div>
+						</li>
+						<li>
+							<a href="#" class="handle">&nbsp;</a>
+							<h3 class="bar">Fourth Heading</h3>
+							<div class="content">
+								<p>Content goes here</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 {% end %}
 {% block center_col %}
-	<h1>setting</h1>
+	<div id="wrapper">
+			<div id="main_container" class="main_container container_16 clearfix">
+				<div class="box grid_8 tabs">
+					<ul class="tab_header grad_colour clearfix">
+						<li><a href="#tabs-1">Quicklinks</a></li>
+						<li><a href="#tabs-2">Content</a></li>
+					</ul>
+					<a href="#" class="grabber">&nbsp;</a>
+					<a href="#" class="toggle">&nbsp;</a>
+					<div class="toggle_container">
+						<div id="tabs-1" class="block no_padding">
+							<ul class="full_width">
+								<li>Aenean tempor ullamcorper</li>
+								<li>Rutrum commodo, vehicula tempus</li>
+								<li><a href="#">Curabitur nec arcu</a></li>
+								<li>Donec sollicitudin mi sit amet mauris</li>
+							</ul>
+						</div>
+						<div id="tabs-2" class="block">
+							<div class="content">
+								<h1>Primary Heading</h1>
+								<p>Lorem Ipsum is simply dummy text of the <a href="#" title="This is a tooltip">printing industry</a>. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+								<h2>Secondary Heading</h2>
+								<p>Lorem Ipsum is simply dummy text of the printing industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 					</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	</div>
 {% end %}
