--- a/htmls/event.html
+++ b/htmls/event.html
@@ -1,18 +1,38 @@
 {% extends google.html %}
 
 {% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/blueprint.css') }}">
+	<link rel="stylesheet" href="{{ static_url('css/index.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/layout.css') }}"/>
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/mediagroove.css') }}"/>
 {% end %}
-{% block leftnav %}
-{% end %}
+{% block leftnav %}{% end %}
 {% block center_col %}
-	<h1>event</h1>
-	
-	<ul id="sub-nav">
-		<li><a>设置一</a></li>
-		<li><a class="active">设置二</a></li>
-		<li><a>设置三</a></li>
-		<li><a>设置四</a></li>
-		<li><a>设置五</a></li>
-	</ul>
+	<div id="index">
+        {%for i in range(len(entries2))%}
+                <div id="mergin1">
+                <table  width=100%>
+                <tbody><tr>
+                        <td width="15%"><a href={{entries1[i]["link"]}} target="_blank"><img src="{{static_url(entries1[i]["imageurl"]["localurl"])}}" /></a></td>
+                        <td width="35%">
+                        <h4 class="blue"><a  href={{entries1[i]["link"]}} target="_blank" title={{entries1[i]["title"]}}>{{entries1[i]["title"]}}</a></h4>
+                        <p><span>组织者：{{entries1[i]["organizername"]}}</span></p>
+                        <p><span>活动类型：{{entries1[i]["activityclass"]}}</span></p>
+                        <p><span>活动地点：{{entries1[i]["place"]}}</span></p>
+                        <p><span>活动时间：{{entries1[i]["time"]}}</span></p>
+                        <p><span >目前热度：<font color="red">{{entries1[i]["hotnumber"]}}</font></span></p>
+                        </td>
+                        <td width="15%"><a href={{entries2[i]["link"]}}  target="_blank"><img src="{{static_url(entries2[i]["imageurl"]["localurl"])}}" /></a></td>
+                        <td width="35%">
+                        <h4 class="blue"><a  href={{entries2[i]["link"]}} target="_blank" title={{entries2[i]["title"]}}>{{entries2[i]["title"]}}</a></h4>
+                        <p><span>组织者：{{entries2[i]["organizername"]}}</span></p>
+                        <p><span>活动类型：{{entries2[i]["activityclass"]}}</span></p>
+                        <p ><span>活动地点：{{entries2[i]["place"]}}</span></p> 
+                        <p><span>活动时间：{{entries2[i]["time"]}}</span></p>
+                        <p><span>目前热度：<font color="red">{{entries2[i]["hotnumber"]}}</font></span></p>
+                        </td></tr>
+                </tbody>
+                </table>
+                </div>
+                {%end%}
+	</div>
 {% end %}
