--- a/htmls/feedback.html
+++ b/htmls/feedback.html
@@ -1,21 +1,24 @@
 {% extends google.html %}
 
 {% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/feedback.css') }}">
+	<link rel="stylesheet" href="{{ static_url('css/feedback.css') }}"></link>
+	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/reply.js') }}" type="text/javascript"></script>
 	{% block static-added %}{% end %}
 {% end %}
 {% block leftnav %}{% end %}
 {% block center_col %}
-	<div>
-		<form action="/feedback" method="post">
-			<textarea rows="3" cols="60" name="content"></textarea>
-			<input type="submit"/>
-		</form>
-	</div>
-
-	<ul id="feedback">
-		{% for f in fb_list %}
-			<li><strong>{{ f['nick'] }}:</strong><p>{{ f['content'] }}</p><span style="display:none;"><a>X</a></span></li><hr/>
+	<ul id="inbox">
+		{% for m in messages %}
+			{% module Template("message.html", message=m) %}
 		{% end %}
 	</ul>
+	<div>
+		<form action="/a/reply?next=/feedback" method="post" id="replyform">
+			<input name="content" id="reply" style="margin-left:100px;height:20px;width:450px;"/>
+			<input type="hidden" name="to" value="feedback"/>
+			<input type="submit" value="回复"/>
+			{% module xsrf_form_html() %}
+		</form>
+	</div>
 {% end %}
