--- a/htmls/event.html
+++ b/htmls/event.html
@@ -12,7 +12,7 @@
                 <div id="mergin1">
                 <table  width=100%>
                 <tbody><tr>
-                        <td width="15%"><a href={{entries1[i]["link"]}} target="_blank"><img src={{static_url("img/entries1[i]['imageurl']['localurl']")}}/></a></td>
+                        <td width="15%"><a href={{entries1[i]["link"]}} target="_blank"><img src={{entries1[i]['imageurl']['localurl']}}/></a></td>
                         <td width="35%">
                         <h4 class="blue"><a href={{entries1[i]["link"]}} target="_blank" title={{entries1[i]["title"]}}>{{entries1[i]["title"]}}</a></h4>
                         <p><span>组织者：{{entries1[i]["organizername"]}}</span></p>
@@ -21,7 +21,7 @@
                         <p><span>活动时间：{{entries1[i]["time"]}}</span></p>
                         <p><span >目前热度：<font color="red">{{entries1[i]["hotnumber"]}}</font></span></p>
                         </td>
-                        <td width="15%"><a href={{entries2[i]["link"]}}  target="_blank"><img src={{static_url("img/entries2[i]['imageurl']['localurl']")}}/></a></td>
+                        <td width="15%"><a href={{entries2[i]["link"]}}  target="_blank"><img src={{img/entries2[i]['imageurl']['localurl']}}/></a></td>
                         <td width="35%">
                         <h4 class="blue"><a  href={{entries2[i]["link"]}} target="_blank" title={{entries2[i]["title"]}}>{{entries2[i]["title"]}}</a></h4>
                         <p><span>组织者：{{entries2[i]["organizername"]}}</span></p>
