--- a/htmls/google.html
+++ b/htmls/google.html
@@ -21,7 +21,7 @@
 </head>
 <body style="" class="" dir="ltr" data-feedly-processed="yes" id="srp" onload="try{if(!google.j.b){document.f&amp;&amp;document.f.q.focus();document.gbqf&amp;&amp;document.gbqf.q.focus()}}catch(e){};if(document.images)new Image().src='/images/nav_logo86.png'" alink="#d14836" bgcolor="#ffffff" link="#1122cc" text="#222222" vlink="#6611cc">
 	<textarea id="csi" style="display: none;"></textarea>
-	<script>if(google.j.b)document.body.style.visibility='hidden';</script>
+	<input type="hidden" id="uid" value="{{uid}}"/>
 	<div id="mngb">
 		<div id="gb">
 			<div id="gbw">
@@ -30,13 +30,13 @@
 					<ol class="gbtc">
 						<li class="gbt">
 							{% if current_user %}
-								<a class="gbzt" id="gb_119" href=""><span class="gbtb2"></span><span class="gbts">{{current_user}}</span></a>
+								<a class="gbzt" id="gb_119" href="/people"><span class="gbtb2"></span><span class="gbts">{{current_user}}</span></a>
 							{% else %}
-								<a class="gbzt" id="gb_119" href=""><span class="gbtb2"></span><span class="gbts">您</span></a>
+								<a class="gbzt" id="gb_119" href="/people"><span class="gbtb2"></span><span class="gbts">您</span></a>
 							{% end %}
 						</li>
-						<li class="gbt"><a class="gbzt gbp1 gbz0l" id="gb_1" href=""><span class="gbtb2"></span><span class="gbts">活动</span></a></li>
-						<li class="gbt"><a class="gbzt" id="hw1" href=""><span class="gbtb2"></span><span class="gbts">轻微博</span></a></li>
+						<li class="gbt"><a class="gbzt gbp1 gbz0l" id="gb_1" href="/event"><span class="gbtb2"></span><span class="gbts">活动</span></a></li>
+						<li class="gbt"><a class="gbzt" id="hw1" href="/weibo"><span class="gbtb2"></span><span class="gbts">轻微博</span></a></li>
 						<li class="gbt"><a class="gbzt" id="hw2" href=""><span class="gbtb2"></span><span class="gbts">知道</span></a></li>
 						<li class="gbt"><a class="gbzt" id="hw3" href=""><span class="gbtb2"></span><span class="gbts">地图</span></a></li>
 						<li class="gbt"><a class="gbzt" id="hw4" href=""><span class="gbtb2"></span><span class="gbts">相册</span></a></li>
