--- a/htmls/reply.html
+++ b/htmls/reply.html
@@ -1,7 +1,7 @@
-<div class="show-reply" id="r-{{ reply['id'] }}">
+<div class="show-reply" id="mr-{{ reply['id'] }}">
 	<div>
 		<b>{{ reply['nick'] }}: </b>{{ reply['content'] }}
-		<a class="remove" value="{{ reply['id'] }}">X</a>
-		<a class="r-reply">回复</a>
+		{% if reply['is_own'] %}<a href="javascript:;" onclick="Reply.remove('d-{{ reply["id"] }}');" class="remove" id="d-{{ reply['id'] }}" style="display:block;text-decoration:none;">X</a>{% end %}
+		<a class="reply" id="r-{{ reply['id'] }}" style="display:none;">回复</a>
 	</div>
 </div>
