--- a/htmls/weibo.html
+++ b/htmls/weibo.html
@@ -3,6 +3,7 @@
 {% block static %}
 	<link rel="stylesheet" href="{{ static_url('css/feedback.css') }}">
 	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/reply.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/remove.js') }}" type="text/javascript"></script>
@@ -11,6 +12,7 @@
 {% block leftnav %}{% end %}
 {% block center_col %}
 	<div>
+		<div class="num" node-type="num" style="display: block;font-size:16px;">还可以输入<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字</div>
 		<form action="/weibo" method="post" id="weiboform">
 			<textarea rows="5" cols="60" name="content" id="weibo-content"></textarea>
 			<input type="submit" value="回复" style="height:20px;"/>
@@ -20,7 +22,7 @@
 	<br><hr>
 	<ul id="inbox">
 		{% for m in messages %}
-			{% module Template("message.html", message=m) %}
+			{% module Template("message.html", message=m, uid=uid) %}
 		{% end %}
 	</ul>
 {% end %}
