--- a/htmls/google.html
+++ b/htmls/google.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="description" content="Search the world's information, including webpages, images, videos and more. Google has many special features to help you find exactly what you're looking for.">
 	<meta name="robots" content="noodp"><title>远航户外</title>
+	<meta property="wb:webmaster" content="98499125f4d97e8f" />
 	<script language="javascript" src="{{ static_url('js/google.js') }}" type="text/javascript"></script>
 	<link rel="stylesheet" href="{{ static_url('css/base.css') }}">
 	<link rel="stylesheet" href="{{ static_url('css/google.css') }}">
