--- a/htmls/login.html
+++ b/htmls/login.html
@@ -15,4 +15,5 @@
 		密码:<input type="password" name="password"/><br/><br/>
 		<input type="submit" value="login">
 	</form>
+	<br/><br/><a href="/account/thirdpart">新浪微博账号</a>
 {% end %}
