--- a/htmls/register.html
+++ b/htmls/register.html
@@ -12,6 +12,7 @@
 {% block center_col %}
 	<form action="/account/register" method="post">
 	绰号:<input type="text" name="nick"/><br/><br/>
+	email:<input type="email" name="email"/><br/><br/>
 	密码:<input type="password" name="password"/><br/><br/>
 	验证码:<input type="text" name="code"/><br/><br/>
 	<input type="submit" value="注册">
