fix bug about weibo

--- a/htmls/setting.html
+++ b/htmls/setting.html
@@ -40,7 +40,7 @@
 				<tr style="display:none">
 					<td class="m" valign="top" align="right">我的域名:</td><td class="n" valign="top">qisan</td>
 				</tr>
-				<tr style="display:none">
+				<tr style="">
 					<td class="m" valign="top" align="right">头像:</td><td class="n" valign="top"></td>
 				</tr>
 				<tr>
