--- a/htmls/index.html
+++ b/htmls/index.html
@@ -6,7 +6,9 @@
 {% block leftnav %}{% end %}
 {% block center_col %}
 	<div id="index">
-		<h1 style="font-size:40px;">活动功能即将上线，敬请期待！</h1></br/><br/></br/><br/></br/><br/></br/><br/></br/>
-		<span><a href="/feedback" style="color:green;font-size:40px;">说说你心中的户外网站吧</a></span>
+		<h1 style="font-size:20px;">无兄弟，不墨脱</h1>
+		<embed src="http://player.youku.com/player.php/sid/XMjc3NjI2MDAw/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+		<br/><br/><br/>
+		<span><a href="/feedback" style="color:green;font-size:40px;">说说你心中的户外网站吧</a></span>	
 	</div>
 {% end %}
