add pstore module

--- a/htmls/message_new.html
+++ b/htmls/message_new.html
@@ -1,70 +1,53 @@
-<dl class="feed_list W_linecolor" mid="{{ message['id'] }}" action-type="feed_list_item">
+<dl diss-data="group_source=" class="feed_list W_linecolor" mid="3389881759488686" action-type="feed_list_item">
 	<dt class="face">
-		<a href="" title="一米七三2010"><img usercard="id={{ message['owner'] }}" title="{{ message['nick'] }}" alt="" width="50" height="50" src=""></a>
+		<a href="/yimiqisan" title="一米七三2010"><img usercard="id=1683546773" title="一米七三2010" alt="" width="50" height="50" src="http://tp2.sinaimg.cn/1683546773/50/5603268482/1"></a>
 	</dt>
 	<dd class="content">
-		<a class="hover W_close_color" action-type="feed_list_atShield" href="javascript:;"></a>
-		<p node-type="feed_list_content" class="feed_list_content">
-			<a nick-name="{{ message['nick'] }}" title="{{ message['nick'] }}" href="" usercard="id={{ message['owner'] }}">{{ message['nick'] }}</a>：
-			<em>{{ message['content'] }}</em>
-		</p>
-		<p class="W_info W_linkb W_textb">
-			<span>
-				<em class="hover"><a href="javascript:void(0);" action-type="feed_list_delete">删除</a><i class="W_vline">|</i></em>
-				<a href="javascript:void(0);" action-type="feed_list_comment">回复</a>
-			</span>
-			<a href="" title="{{ message['created'] }}" date="{{ message['created'] }}" class="date" node-type="feed_list_item_date">{{ message['created'] }}</a>
+		<p node-type="feed_list_content"><a nick-name="一米七三2010" title="一米七三2010" href="/yimiqisan" usercard="id=1683546773">一米七三2010</a>：<em>123</em></p>
+		
+		<p class="info W_linkb W_textb">
+		<span>
+		<em class="hover"><a href="javascript:void(0);" action-type="feed_list_delete">删除</a><i class="W_vline">|</i></em>
+		<a href="javascript:void(0);" action-type="feed_list_comment">评论(1)</a>
+		</span>
+		<a href="/1683546773/xBIezDOrk" title="2011-12-12 20:50" date="1323694256000" class="date" node-type="feed_list_item_date">40秒前</a> 来自<a target="_blank" href="http://weibo.com" rel="nofollow">新浪微博</a>
 		</p>
 		
 		
-		<div node-type="feed_list_repeat" class="repeat W_textc W_linecolor W_bgcolor" style="display:none;">
-			<div class="arrow W_bgcolor_arrow"><em class="W_arrline">◆</em><span>◆</span></div>
-			<div node-type="commentList" class="input clearfix">
-				<div>
-					<textarea action-type="check" cols="" rows="" name="" node-type="textEl" style="margin-top: 0px; margin-left: 0px; margin-bottom: 3px; margin-right: 0px; padding-top: 4px; padding-left: 4px; padding-bottom: 0px; padding-right: 4px; border-top-color: rgb(198, 198, 198); border-top-style: solid; border-top-width: 1px; border-left-color: rgb(198, 198, 198); border-left-style: solid; border-left-width: 1px; border-bottom-color: rgb(198, 198, 198); border-bottom-style: solid; border-bottom-width: 1px; border-right-color: rgb(198, 198, 198); border-right-style: solid; border-right-width: 1px; font-size: 12px; font-family: Tahoma, 宋体; word-wrap: break-word; line-height: 18px; outline-style: none; outline-width: initial; outline-color: initial; overflow-x: hidden; overflow-y: hidden; height: 22px; " range="3&amp;0"></textarea>
-				</div>
-				<div class="action clearfix" node-type="widget">
-					<span class="faces" title="表情" alt="表情" node-type="smileyBtn"></span>
-					<ul class="commoned_list">
-						<li><label><input class="W_checkbox" type="checkbox" name="forward">同时转发到我的微博</label></li>
-					</ul>
-				</div>
-				<p class="btn">
-					<a class="W_btn_b btn_noloading" action-type="post" diss-data="module=scommlist" href="####" onclick="return false">
-						<span><b class="loading"></b><em node-type="btnText">评论</em></span>
-					</a>
-				</p>
+		
+		
+		
+	<div node-type="feed_list_repeat" class="repeat W_textc W_linecolor W_bgcolor" style="">
+		<!-- 评论框 -->
+		<div node-type="commentList" class="input clearfix">
+			<div>
+				<textarea action-type="check" cols="" rows="" name="" node-type="textEl" style="margin:0 0 3px 0; padding：4px 4px 0 4px; border: 1px solid rgb(198, 198, 198); font-size: 12px; font-family: Tahoma, 宋体; word-wrap: break-word; line-height: 18px; outline-style: none; outline-width: initial; outline-color: initial; overflow-x: hidden; overflow-y: hidden; height: 22px;"></textarea>
+				<p class="btn" style="margin:0 0 1px 0; padding-top:2px;float:right;"><a class="W_btn_b btn_noloading" action-type="post" href="####" onclick="return false"><span><b class="loading"></b><em node-type="btnText">评论</em></span></a></p>
 			</div>
-			<div class="comment_lists" node-type="feed_list_commentList">
-				<dl comment_id="3386989674206370" class="comment_list W_linecolor">
-					<dt>
-						<a href=""><img width="30" height="30" alt="户外远航" src="" usercard="id=2419002945" ucardconf="type=1"></a>
-					</dt>
-					<dd>
-						<a href="" usercard="id=2419002945" ucardconf="type=1">户外远航</a>：123 (10秒前)
-						<p class="info W_textb">
-							<span class="W_linkb">
-								<em><a href="####" onclick="return false" action-type="delete" action-data="">删除</a><i class="W_vline">|</i></em>
-								<a href="####" onclick="return false" action-type="reply" action-data="">回复</a>
-							</span>
-						</p>
-					</dd>
-					<dd class="clear"></dd>
-				</dl>
-			</div>
-			
-			
+			<div class="action clearfix" node-type="widget"></div>
 		</div>
+		<!-- 已有评论列表 -->
+		<div class="comment_lists" node-type="feed_list_commentList">
+			<dl comment_id="3389881789284852" class="comment_list W_linecolor">
+				<dt><a href="/yimiqisan"><img width="30" height="30" alt="一米七三2010" src="http://tp2.sinaimg.cn/1683546773/50/5603268482/1"></a></dt>
+				<dd>
+					<a href="/yimiqisan" usercard="id=1683546773" ucardconf="type=1">一米七三2010</a>：312 (10秒前)
+					<p class="info W_textb">
+						<span class="W_linkb">
+							<em><a href="####" onclick="return false">删除</a><i class="W_vline">|</i></em>
+							<a href="####" onclick="return false" action-type="reply">回复</a>
+						</span>
+					</p>
+				</dd>
+				<dd class="clear"></dd>
+			</dl>
+		</div>
+	</div>
+	
+	
+	
+	
+	
 	</dd>
 	<dd class="clear"></dd>
-</dl>
-
-
-<li class="message" id="m-{{ message['id'] }}">
-	<div>
-		{% if message['is_own'] %}<a class="remove" id="d-{{ message['id'] }}">X</a>{% end %}
-		<p><a>{{ message['nick'] }}: </a>{{ message['content'] }}</p>
-		{% if uid %}<a class="reply" id="r-{{ message['id'] }}">回复</a>{% end %}
-	</div>
-</li>
-
+	</dl>
