--- a/htmls/reply.html
+++ b/htmls/reply.html
@@ -1,7 +1,11 @@
-<div class="show-reply" id="mr-{{ reply['id'] }}">
-	<div>
-		<b>{{ reply['nick'] }}: </b>{{ reply['content'] }}
-		{% if reply['is_own'] %}<a href="javascript:;" onclick="Reply.remove('d-{{ reply["id"] }}');" class="remove" id="d-{{ reply['id'] }}" style="display:block;text-decoration:none;">X</a>{% end %}
-		<a class="reply" id="r-{{ reply['id'] }}" style="display:none;">回复</a>
-	</div>
-</div>
+<dl id="mr-{{ reply['id'] }}" class="comment_list W_linecolor">
+	<dt><a href=""><img width="30" height="30" alt="一米七三2010" src=""></a></dt>
+	<dd>
+		<a href="">{{ reply['nick'] }}</a>：{{ reply['content'] }} (10秒前)
+		<p class="info W_textb">
+			<span class="W_linkb">
+				<em><a onclick="Reply.remove('d-{{ reply["id"] }}');" href="javascript:;" class="" id="d-{{ reply['id'] }}">删除</a><i class="W_vline">|</i></em>
+				<a class="reply" id="r-{{ reply['id'] }}" style="" >回复</a></span></p>
+	</dd>
+	<dd class="clear"></dd>
+</dl>
