--- a/htmls/weibo.html
+++ b/htmls/weibo.html
@@ -5,8 +5,7 @@
 	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/reply.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/remove.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
 	{% block static-added %}{% end %}
 {% end %}
 {% block leftnav %}{% end %}
@@ -26,5 +25,6 @@
 		{% for m in messages %}
 			{% module Template("message.html", message=m, uid=uid) %}
 		{% end %}
+		<div class="bottom feed_list">更多</div>
 	</div>
 {% end %}
