fix bug about weibo

--- a/htmls/reply.html
+++ b/htmls/reply.html
@@ -1,7 +1,7 @@
 <dl id="m-{{ reply['id'] }}" class="comment_list W_linecolor">
 	<dt><a href=""><img width="30" height="30" alt="一米七三2010" src=""></a></dt>
 	<dd>
-		<a href="">{{ reply['nick'] }}</a>：{{ reply['content'] }} (10秒前)
+		<a href="">{{ reply['nick'] }}</a>：{{ reply['content'] }} ({{ reply['created'] }})
 		<p class="info W_textb">
 			<span class="W_linkb">
 				<em><a onclick="delItem(this);return false;" href="#" id="d-{{ reply['id'] }}">删除</a><i class="W_vline">|</i></em>
